--- a/index.html
+++ b/index.html
@@ -1,59 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" media="(max-width: 800px)" href="style_mobile.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Room homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Home
-  Shop
-  About
-  Contact
-
-  Discover innovative ways to decorate
-
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form andnfunction in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
-
-  Shop now
-
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | Room homepage</title>
+  </head>
+  <body>
+    <header>
+      <!--desktop-->
+      <section class="header-desktop">
+        <div class="header-logo">
+          <img src="/images/logo.svg" alt="logo" />
+        </div>
+        <ul class="header-nav-links">
+          <li class="header-nav-link">home</li>
+          <li class="header-nav-link">shop</li>
+          <li class="header-nav-link">about</li>
+          <li class="header-nav-link">contact</li>
+        </ul>
+      </section>
+      <!--mobile-->
+      <section class="header-mobile">
+        <div class="h-mobile-ham">
+          <img src="/images/icon-hamburger.svg" alt="hamburger" />
+        </div>
+        <div class="h-mobile-logo">
+          <img src="/images/logo.svg" alt="logo" />
+        </div>
+      </section>
+      <!--mobile nav-->
+      <section class="mobile-nav">
+        <div class="nav-close">
+          <img src="/images/icon-close.svg" alt="" />
+        </div>
+        <ul class="mobile-nav-links">
+          <li class="mobile-nav-link">home</li>
+          <li class="mobile-nav-link">shop</li>
+          <li class="mobile-nav-link">about</li>
+          <li class="mobile-nav-link">contact</li>
+        </ul>
+      </section>
+    </header>
+    <main>
+      <!--article top-->
+      <article class="article-top">
+        <div class="article-top-img">
+          <img src="/images/desktop-image-hero-1.jpg" alt="hero" />
+        </div>
+        <div class="article-top-content">
+          <h1>Discover innovative ways to decorate</h1>
+          <p>
+            We provide unmatched quality, comfort, and style for property owners
+            across the country. Our experts combine form and function in
+            bringing your vision to life. Create a room in your own style with
+            our collection and make your property a reflection of you and what
+            you love.
+          </p>
+          <button class="article-top-btn">
+            SHOP NOW
+            <img src="/images/icon-arrow.svg" alt="arrow" />
+          </button>
+          <div class="slide-btns">
+            <button class="slide-left">
+              <img src="/images/icon-angle-left.svg" alt="left" />
+            </button>
+            <button class="slide-right">
+              <img src="/images/icon-angle-right.svg" alt="right" />
+            </button>
+          </div>
+        </div>
+      </article>
+      <!--article bottom-->
+      <article class="article-bottom">
+        <div class="a-img-left">
+          <img src="images/image-about-dark.jpg" alt="dark" />
+        </div>
+        <div class="a-b-text">
+          <h2>ABOUT OUR FURNITURE</h2>
+          <p>
+            Our multifunctional collection blends design and function to suit
+            your individual taste. Make each room unique, or pick a cohesive
+            theme that best express your interests and what inspires you. Find
+            the furniture pieces you need, from traditional to contemporary
+            styles or anything in between. Product specialists are available to
+            help you create your dream space.
+          </p>
+        </div>
+        <div class="a-img-right">
+          <img src="/images/image-about-light.jpg" alt="light" />
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
