--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
       <!--article top-->
       <article class="article-top">
         <div class="article-top-img">
-          <img src="/images/desktop-image-hero-1.jpg" alt="hero" />
+          <img
+            class="desktop"
+            src="/images/desktop-image-hero-1.jpg"
+            alt="hero"
+          />
+          <img
+            class="mobile"
+            src="/images/mobile-image-hero-1.jpg"
+            alt="hero"
+          />
         </div>
         <div class="article-top-content">
           <h1>Discover innovative ways to decorate</h1>
