--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" media="(max-width: 800px)" href="style_mobile.css" />
+    <link
+      rel="stylesheet"
+      media="(max-width: 1020px)"
+      href="style_mobile.css"
+    />
+    <script defer src="app.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap"
       rel="stylesheet"
@@ -23,35 +28,42 @@
       <!--desktop-->
       <section class="header-desktop">
         <div class="header-logo">
-          <img src="/images/logo.svg" alt="logo" />
+          <a href="#"><img src="/images/logo.svg" alt="logo" /></a>
         </div>
         <ul class="header-nav-links">
-          <li class="header-nav-link">home</li>
-          <li class="header-nav-link">shop</li>
-          <li class="header-nav-link">about</li>
-          <li class="header-nav-link">contact</li>
+          <a href="#"><li class="header-nav-link">home</li></a>
+          <a href="#"><li class="header-nav-link">shop</li></a>
+          <a href="#"><li class="header-nav-link">about</li></a>
+          <a href="#"><li class="header-nav-link">contact</li></a>
         </ul>
       </section>
       <!--mobile-->
       <section class="header-mobile">
         <div class="h-mobile-ham">
-          <img src="/images/icon-hamburger.svg" alt="hamburger" />
+          <button class="hamburger">
+            <img src="/images/icon-hamburger.svg" alt="hamburger" />
+          </button>
         </div>
         <div class="h-mobile-logo">
           <img src="/images/logo.svg" alt="logo" />
         </div>
       </section>
       <!--mobile nav-->
-      <section class="mobile-nav">
-        <div class="nav-close">
-          <img src="/images/icon-close.svg" alt="" />
+      <section class="mobile-nav-bar">
+        <div class="mobile-nav">
+          <div class="nav-close">
+            <button class="close-nav">
+              <img src="/images/icon-close.svg" alt="" />
+            </button>
+          </div>
+          <ul class="mobile-nav-links">
+            <a href="#"><li class="mobile-nav-link">home</li></a>
+            <a href="#"><li class="mobile-nav-link">shop</li></a>
+            <a href="#"><li class="mobile-nav-link">about</li></a>
+            <a href="#"><li class="mobile-nav-link">contact</li></a>
+          </ul>
         </div>
-        <ul class="mobile-nav-links">
-          <li class="mobile-nav-link">home</li>
-          <li class="mobile-nav-link">shop</li>
-          <li class="mobile-nav-link">about</li>
-          <li class="mobile-nav-link">contact</li>
-        </ul>
+        <div class="mobile-nav-bg"></div>
       </section>
     </header>
     <main>
