--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      media="(max-width: 1020px)"
+      media="(max-width: 1019px)"
       href="style_mobile.css"
     />
+    <link
+      rel="stylesheet"
+      media="(min-width: 1441px)"
+      href="style1441.css"
+    />
+    <link rel="stylesheet" href="">
     <script defer src="app.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap"
@@ -115,7 +121,7 @@
       <!--article bottom-->
       <article class="article-bottom">
         <div class="a-img-left">
-          <img src="images/image-about-dark.jpg" alt="dark" />
+          <img class="img-left" src="images/image-about-dark.jpg" alt="dark" />
         </div>
         <div class="a-b-text">
           <h2>ABOUT OUR FURNITURE</h2>
@@ -129,7 +135,7 @@
           </p>
         </div>
         <div class="a-img-right">
-          <img src="/images/image-about-light.jpg" alt="light" />
+          <img class="img-right" src="/images/image-about-light.jpg" alt="light" />
         </div>
       </article>
     </main>
